1. Added dealerships roles and entity and implemented permitions 2. Improved calculations of currency prices