@@ -1,42 +1,72 @@
 package autoria.service;
 
 import autoria.dto.CarDTO;
+import autoria.entity.CalculatedCurrencyPrices;
+import autoria.entity.Car;
+import autoria.entity.enums.CarBrand;
 import autoria.exception.CustomException;
 import autoria.mapper.CarMapper;
+import autoria.repository.CalculatedCurrencyPricesDAO;
 import autoria.repository.CarDAO;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.Objects;
+import java.util.Optional;
+import java.util.stream.Collectors;
+import java.util.stream.DoubleStream;
 
 @Service
 @RequiredArgsConstructor
 public class PriceCalculationService {
 
-    private final CarMapper carMapper;
     private final CarDAO carDAO;
+    private final CalculatedCurrencyPricesDAO calculatedCurrencyPricesDAO;
 
-    public Double getAverageCarsPrice() throws CustomException {
 
-        return getAll()
+    public Double getAverageCarsPrice(CarBrand carBrand)  {
+        List<Car> cars = carDAO
+                .findAll()
                 .stream()
-                .mapToDouble(CarDTO::getPrice) //TODO check for the currency and convert to the single currency
-                .average()
-                .orElseThrow(()-> new CustomException("Cannot calculate average cars price data."));
+                .filter(car -> car.getBrand().equals(carBrand))
+                .toList();
+
+        List<Double> uahPrices = getUahPricesForCars(cars);
+
+        return uahPrices
+                .isEmpty()
+                    ? 0.0
+                    : uahPrices
+                        .stream()
+                        .mapToDouble(Double::doubleValue)
+                        .average()
+                        .orElse(0.0);
     }
 
-    public Double getAverageCarsPriceByRegion(String region) throws CustomException {
-
-        return getAll()
+    public Double getAverageCarsPriceByRegion(String region, CarBrand carBrand) {
+        List<Car> cars = carDAO
+                .findAll()
                 .stream()
-                .filter(car -> car.getRegion().equals(region))
-                .mapToDouble(CarDTO::getPrice)
-                .average()
-                .orElseThrow(()-> new CustomException("Cannot calculate average cars price by " + region + " region"));
+                .filter(car -> car.getRegion().equals(region) && car.getBrand().equals(carBrand))
+                .toList();
+
+        List<Double> uahPrices = getUahPricesForCars(cars);
+
+        return uahPrices
+                .isEmpty()
+                    ? 0.0
+                    : uahPrices
+                        .stream()
+                        .mapToDouble(Double::doubleValue)
+                        .average()
+                        .orElse(0.0);
     }
 
-    private List<CarDTO> getAll(){
-        return  carDAO.findAll().stream().map(carMapper::convertToDto).toList();
-
+    private List<Double> getUahPricesForCars(List<Car> cars) {
+        return cars.stream()
+                .map(car -> calculatedCurrencyPricesDAO.findByCar(car).map(CalculatedCurrencyPrices::getUAH).orElse(null))
+                .filter(Objects::nonNull)
+                .collect(Collectors.toList());
     }
 }
